# Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependencies.json
App/: main.cpp
App/Shaders/: shader.frag  shader.vert
Engine/: main.cpp
Engine/include/common/: common.h
Engine/include/core/: Engine.h
Engine/include/math/: Vec2.h  Vec3.h
Engine/include/math/Dev/: Geometry.h  Vec3.h
Engine/include/platform/: Window.h
Engine/include/renderer/: Renderer.h
Engine/include/renderer/OpenGL/core/: GEOpenGL.h
Engine/include/renderer/Vulkan/: GEVulkan.h  GEVulkanFrameContext.h  GEVulkanFramebuffer.h  GEVulkanImageView.h  GEVulkanLogicalDevice.h  GEVulkanPhysicalDevice.h  GEVulkanPipeline.h  GEVulkanRenderPass.h  GEVulkanShader.h  GEVulkanSurfaceView.h  GEVulkanSwapChain.h  GEVulkanValidationLayer.h
Engine/include/renderer/Vulkan/Render/: GEVulkanFrameContext.h  GEVulkanPipeline.h  GEVulkanRenderPass.h
Engine/include/renderer/Vulkan/Resources/: GEVulkanBuffer.h  GEVulkanDepthImage.h  GEVulkanFramebuffer.h  GEVulkanImage.h  GEVulkanShader.h  GEVulkanStagingDevice.h  GEVulkanTexture.h
Engine/include/renderer/Vulkan/Surface/: GEVulkanSwapChain.h
Engine/include/renderer/Vulkan/common/: GEVulkancommon.h
Engine/include/renderer/Vulkan/core/: GEVulkan.h  GEVulkanCommandPool.h  GEVulkanLogicalDevice.h  GEVulkanPhysicalDevice.h  GEVulkanValidationLayer.h
Engine/include/utils/: FileUtils.h  ImageLoader.h  MeshLoader.h
Engine/math/private/: Mat3.cpp  Mat4.cpp
Engine/math/public/: Vec2.h
Engine/platform/private/: Input.cpp  Timer.cpp
Engine/platform/public/: Input.h  Timer.h  Window.h
Engine/renderer/private/: Material.cpp
Engine/renderer/public/: Camera.h  Material.h
Engine/src/core/: Engine.cpp
Engine/src/math/: Quaternion.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Engine/src/platform/: Window.cpp
Engine/src/renderer/: Camera.cpp  Light.cpp  Renderer.cpp
Engine/src/renderer/Vulkan/: GEVulkan.cpp  GEVulkanFrameContext.cpp  GEVulkanFramebuffer.cpp  GEVulkanImageView.cpp  GEVulkanLogicalDevice.cpp  GEVulkanPhysicalDevice.cpp  GEVulkanPipeline.cpp  GEVulkanRenderPass.cpp  GEVulkanShader.cpp  GEVulkanSurfaceView.cpp  GEVulkanSwapChain.cpp  GEVulkanValidationLayer.cpp
Engine/src/renderer/Vulkan/Render/: GEVulkanFrameContext.cpp  GEVulkanPipeline.cpp  GEVulkanRenderPass.cpp
Engine/src/renderer/Vulkan/Resource/: GEVulkanBuffer.cpp  GEVulkanDepthImage.cpp  GEVulkanFramebuffer.cpp  GEVulkanImage.cpp  GEVulkanImageView.cpp  GEVulkanShader.cpp  GEVulkanStagingDevice.cpp  GEVulkanTexture.cpp
Engine/src/renderer/Vulkan/Surface/: GEVulkanSurfaceView.cpp  GEVulkanSwapChain.cpp
Engine/src/renderer/Vulkan/core/: GEVulkan.cpp  GEVulkanCommandPool.cpp  GEVulkanLogicalDevice.cpp  GEVulkanPhysicalDevice.cpp  GEVulkanValidationLayer.cpp
Engine/src/utils/: FileUtils.cpp  ImageLoader.cpp  MeshLoader.cpp
Engine/utils/private/: Logger.cpp
Engine/utils/public/: Logger.h
Test/: main.cpp
TestSuite/: CMakeLists.txt
src/math/private/: Geometry.cpp  Vec3.cpp
src/math/public/: Mat3.h  Mat4.h  Quaternion.h  Vec3.h  Vec4.h
src/renderer/private/: Renderer.cpp  Scene.cpp  Shader.cpp
src/renderer/public/: Light.h  Scene.h  Shader.h
src/utils/private/: FileUtils.cpp  ImageLoader.cpp
src/utils/public/: FileUtils.h  ImageLoader.h
